--- a/app/views/feed/index.html.erb
+++ b/app/views/feed/index.html.erb
@@ -6,15 +6,14 @@
     <div>
     <div class="input-group">
     <input type="text" class="form-control" placeholder="Pesquisar" aria-label="Recipient's username" aria-describedby="button-addon2">
-    <button class="btn btn-outline-secondary" type="button" id="button-addon2">@</button>
+    <button class="btn btn-outline-secondary" type="button" id="button-addon2"> <%= image_tag 'search.svg' %> </button>
   </div>
     </div>
 
     <div>
     <button class="btn btn-primary">Fazer Login</button>
     </div>
-
-
+  
 
 
 
