Sidebar and navbar feature and enhancments

--- a/app/views/feed/index.html.erb
+++ b/app/views/feed/index.html.erb
@@ -1,22 +1,4 @@
-<nav class="navbar px-3">
-    <div >
-      <%=image_tag "youtube.svg"%>
-    </div>
 
-    <div>
-    <div class="input-group">
-    <input type="text" class="form-control" placeholder="Pesquisar" aria-label="Recipient's username" aria-describedby="button-addon2" style="border-bottom-left-radius:20px;border-top-left-radius:20px">
-    <button class="btn btn-outline-secondary" type="button" id="button-addon2" style="border-bottom-right-radius:20px;border-top-right-radius:20px"> <%= image_tag 'search.svg' %> </button>
-  </div>
-    </div>
-
-    <div>
-    <button class="btn btn-outline-secondary" style="border-radius:20px"> <%=image_tag "person-circle.svg"%> Fazer Login</button>
-    </div>
-  
-
-
-
-
-
-</nav>
+<h1>Bem-vindo</h1>
+<p>Este é o conteúdo principal da página. Aqui você pode adicionar o que desejar.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</p>
