--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,42 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body style="max-height:100%;">
+    <!-- Navbar fixa no topo -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+      <div class="container-fluid">
+        <div style="padding-left: 10px">
+          <a class="navbar-brand" href="#"><%=image_tag "youtube.svg"%></a>
+        </div>
+        <div>
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Pesquisar" aria-label="Recipient's username" aria-describedby="button-addon2" style="border-bottom-left-radius:20px;border-top-left-radius:20px">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2" style="border-bottom-right-radius:20px;border-top-right-radius:20px"> <%= image_tag 'search.svg' %> </button>
+          </div>
+        </div>
+
+        <div>
+          <button class="btn btn-outline-secondary" style="border-radius:20px"> <%=image_tag "person-circle.svg"%> Fazer Login</button>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Sidebar fixa na esquerda -->
+    <div class="sidebar">
+      <a href="#">
+        <%= image_tag "home.svg", class: "my-3" %>
+        Início
+      </a>
+      <a href="#">
+        <%= image_tag "person-circle.svg", class: "my-3" %>
+        Perfil
+      </a>
+      <a href="#"><%= image_tag "youtube.svg", class: "my-3" %></a>
+      <a href="#"><%= image_tag "youtube.svg", class: "my-3" %></a>
+    </div>
+
+    <div class="content">
+      <%= yield %>
+    </div>
   </body>
 </html>
