--- a/app/views/feed/index.html.erb
+++ b/app/views/feed/index.html.erb
@@ -1,4 +1,79 @@
 
-<h1>Bem-vindo</h1>
-<p>Este é o conteúdo principal da página. Aqui você pode adicionar o que desejar.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</p>
+<div class="thumbnail-container">
+  <a href=""> 
+    <div class="thumbnail"> 
+      <div class="thumbnail-image"> <img src=" <%= asset_path ('Thumbnails.jpg') %>" alt="thumbnail"/></div>
+      <div class="thumbnail-infos">
+        <div class="thumbnail-channel">
+          <%= image_tag "person-circle.svg" %>
+        </div>
+        <div class="thumbnail-details">
+          <h1>Como Reinventar o Computador do Zero afdnuaf euuiahfasuifeuinfu  ibea sufbueafau</h1>
+          <p>Infinitamente</p>
+          <p>1,3 mi vizualizações • há 8 meses</p>
+        </div>
+      </div>
+    </div>
+  </a> 
+  <a href=""> 
+    <div class="thumbnail"> 
+      <div class="thumbnail-image"> <img src=" <%= asset_path ('Thumbnails.jpg') %>" alt="thumbnail"/></div>
+      <div class="thumbnail-infos">
+        <div class="thumbnail-channel">
+          <%= image_tag "person-circle.svg" %>
+        </div>
+        <div class="thumbnail-details">
+          <h1>Como Reinventar o Computador do Zero afdnuaf euuiahfasuifeuinfu  ibea sufbueafau</h1>
+          <p>Infinitamente</p>
+          <p>1,3 mi vizualizações • há 8 meses</p>
+        </div>
+      </div>
+    </div>
+  </a> 
+  <a href=""> 
+    <div class="thumbnail"> 
+      <div class="thumbnail-image"> <img src=" <%= asset_path ('Thumbnails.jpg') %>" alt="thumbnail"/></div>
+      <div class="thumbnail-infos">
+        <div class="thumbnail-channel">
+          <%= image_tag "person-circle.svg" %>
+        </div>
+        <div class="thumbnail-details">
+          <h1>Como Reinventar o Computador do Zero afdnuaf euuiahfasuifeuinfu  ibea sufbueafau</h1>
+          <p>Infinitamente</p>
+          <p>1,3 mi vizualizações • há 8 meses</p>
+        </div>
+      </div>
+    </div>
+  </a> 
+
+  <a href=""> 
+    <div class="thumbnail"> 
+      <div class="thumbnail-image"> <img src=" <%= asset_path ('Thumbnails.jpg') %>" alt="thumbnail"/></div>
+      <div class="thumbnail-infos">
+        <div class="thumbnail-channel">
+          <%= image_tag "person-circle.svg" %>
+        </div>
+        <div class="thumbnail-details">
+          <h1>Como Reinventar o Computador do Zero afdnuaf euuiahfasuifeuinfu  ibea sufbueafau</h1>
+          <p>Infinitamente</p>
+          <p>1,3 mi vizualizações • há 8 meses</p>
+        </div>
+      </div>
+    </div>
+  </a> 
+  <a href=""> 
+    <div class="thumbnail"> 
+      <div class="thumbnail-image"> <img src=" <%= asset_path ('Thumbnails.jpg') %>" alt="thumbnail"/></div>
+      <div class="thumbnail-infos">
+        <div class="thumbnail-channel">
+          <%= image_tag "person-circle.svg" %>
+        </div>
+        <div class="thumbnail-details">
+          <h1>Como Reinventar o Computador do Zero afdnuaf euuiahfasuifeuinfu  ibea sufbueafau</h1>
+          <p>Infinitamente</p>
+          <p>1,3 mi vizualizações • há 8 meses</p>
+        </div>
+      </div>
+    </div>
+  </a> 
+<div>
