--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,10 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
       <div class="container-fluid">
         <div style="padding-left: 10px">
-          <a class="navbar-brand" href="#"><%=image_tag "youtube.svg"%></a>
+          <a class="navbar-brand" href="#"><%= image_tag "youtube.svg" %></a>
         </div>
         <div>
-          <div class="input-group">
+          <div class="input-group main-search-bar">
             <input type="text" class="form-control" placeholder="Pesquisar" aria-label="Recipient's username" aria-describedby="button-addon2" style="border-bottom-left-radius:20px;border-top-left-radius:20px">
             <button class="btn btn-outline-secondary" type="button" id="button-addon2" style="border-bottom-right-radius:20px;border-top-right-radius:20px"> <%= image_tag 'search.svg' %> </button>
           </div>
