--- a/app/views/feed/index.html.erb
+++ b/app/views/feed/index.html.erb
@@ -1,79 +1,22 @@
 
 <div class="thumbnail-container">
-  <a href=""> 
-    <div class="thumbnail"> 
-      <div class="thumbnail-image"> <img src=" <%= asset_path ('Thumbnails.jpg') %>" alt="thumbnail"/></div>
-      <div class="thumbnail-infos">
-        <div class="thumbnail-channel">
-          <%= image_tag "person-circle.svg" %>
-        </div>
-        <div class="thumbnail-details">
-          <h1>Como Reinventar o Computador do Zero afdnuaf euuiahfasuifeuinfu  ibea sufbueafau</h1>
-          <p>Infinitamente</p>
-          <p>1,3 mi vizualizações • há 8 meses</p>
-        </div>
-      </div>
-    </div>
-  </a> 
-  <a href=""> 
-    <div class="thumbnail"> 
-      <div class="thumbnail-image"> <img src=" <%= asset_path ('Thumbnails.jpg') %>" alt="thumbnail"/></div>
-      <div class="thumbnail-infos">
-        <div class="thumbnail-channel">
-          <%= image_tag "person-circle.svg" %>
-        </div>
-        <div class="thumbnail-details">
-          <h1>Como Reinventar o Computador do Zero afdnuaf euuiahfasuifeuinfu  ibea sufbueafau</h1>
-          <p>Infinitamente</p>
-          <p>1,3 mi vizualizações • há 8 meses</p>
-        </div>
-      </div>
-    </div>
-  </a> 
-  <a href=""> 
-    <div class="thumbnail"> 
-      <div class="thumbnail-image"> <img src=" <%= asset_path ('Thumbnails.jpg') %>" alt="thumbnail"/></div>
-      <div class="thumbnail-infos">
-        <div class="thumbnail-channel">
-          <%= image_tag "person-circle.svg" %>
-        </div>
-        <div class="thumbnail-details">
-          <h1>Como Reinventar o Computador do Zero afdnuaf euuiahfasuifeuinfu  ibea sufbueafau</h1>
-          <p>Infinitamente</p>
-          <p>1,3 mi vizualizações • há 8 meses</p>
-        </div>
-      </div>
-    </div>
-  </a> 
 
-  <a href=""> 
-    <div class="thumbnail"> 
-      <div class="thumbnail-image"> <img src=" <%= asset_path ('Thumbnails.jpg') %>" alt="thumbnail"/></div>
-      <div class="thumbnail-infos">
-        <div class="thumbnail-channel">
-          <%= image_tag "person-circle.svg" %>
-        </div>
-        <div class="thumbnail-details">
-          <h1>Como Reinventar o Computador do Zero afdnuaf euuiahfasuifeuinfu  ibea sufbueafau</h1>
-          <p>Infinitamente</p>
-          <p>1,3 mi vizualizações • há 8 meses</p>
-        </div>
-      </div>
-    </div>
-  </a> 
-  <a href=""> 
-    <div class="thumbnail"> 
-      <div class="thumbnail-image"> <img src=" <%= asset_path ('Thumbnails.jpg') %>" alt="thumbnail"/></div>
-      <div class="thumbnail-infos">
-        <div class="thumbnail-channel">
-          <%= image_tag "person-circle.svg" %>
-        </div>
-        <div class="thumbnail-details">
-          <h1>Como Reinventar o Computador do Zero afdnuaf euuiahfasuifeuinfu  ibea sufbueafau</h1>
-          <p>Infinitamente</p>
-          <p>1,3 mi vizualizações • há 8 meses</p>
+  <% # (1..10) == [1,2,3,4,5,6,7,8,9,10].each  %>
+  <% (1..50).each do |number|  %>
+    <a href="/watch?v=<%= number %>">
+      <div class="thumbnail"> 
+        <div class="thumbnail-image"> <img src=" <%= asset_path ('Thumbnails.jpg') %>" alt="thumbnail"/></div>
+        <div class="thumbnail-infos">
+          <div class="thumbnail-channel">
+            <%= image_tag "person-circle.svg" %>
+          </div>
+          <div class="thumbnail-details">
+            <h1>Como Reinventar o Computador do Zero afdnuaf euuiahfasuifeuinfu  ibea sufbueafau</h1>
+            <p>Infinitamente</p>
+            <p>1,3 mi vizualizações • há 8 meses</p>
+          </div>
         </div>
       </div>
-    </div>
-  </a> 
+    </a>
+  <% end %> 
 <div>
