--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -18,6 +18,7 @@
             <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Senha">
         </div>
         <div class=" mt-3">
+            <a href="/login" class="btn btn-secondary">Voltar</a>
             <button type="submit" class="btn btn-primary" style="float: right;">Criar</button>
         </div>
     </form>
