create sistem user feature

--- a/app/views/video/watch.html.erb
+++ b/app/views/video/watch.html.erb
@@ -32,6 +32,25 @@
                 </button>
             </div>
         </div>
+
+        <div class="container_description mt-3" > 
+            <div class="views_description"> 
+                
+             1.677 visualizações  12 de abr. de 2023
+            
+            </div>
+        
+            <div class="text_description"> 
+                
+            GROWTH: https://www.gsuplementos.com.br
+
+            Aproveite e acesse o site do nosso novo parceiro ! E para mais descontos utilize os CUPONS, CARIANI, BALESTRIN E CTRC
+            https://www.usealphaco.com.br
+
+            As melhores roupas, com qualidade e melhor preço da internet !
+            Transcrição
+            </div>
+        </div>
     </div>
     <div class="col-4" style="display: flex; flex-direction: column">
         <% (1..50).each do |number|  %>
