--- a/app/assets/stylesheets/watch.scss
+++ b/app/assets/stylesheets/watch.scss
@@ -84,3 +84,10 @@
     align-items: center;
     justify-content: center;
 }
+.container_description{
+    width: 100%;
+    height: auto;
+    background: rgba(0, 0, 0, 0.05);
+    padding: 8px;
+    border-radius: 13px;
+}
