--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -1,25 +1,33 @@
 <div class="container_login"> 
     <h1 class="title_login"> Criar conta </h1>
-    <form>
+    <form action="/new_user" method="post">
+        <!-- Adiciona token CSRF para segurança -->
+        <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+
         <div class="form-group mt-3">
-            <label for="exampleInputEmail1">Nome</label>
-            <input type="text" class="form-control" id="exampleInputNome1" placeholder="Nome">
+            <label for="name">Nome</label>
+            <input type="text" class="form-control" id="name" name="user[name]" placeholder="Nome">
         </div>
+
         <div class="form-group mt-3">
-            <label for="exampleInputEmail1">Email</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+            <label for="email">Email</label>
+            <input type="email" class="form-control" id="email" name="user[email]" placeholder="Email">
         </div>
+
         <div class="form-group mt-3">
-            <label for="exampleInputPassword1">Senha</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+            <label for="password">Senha</label>
+            <input type="password" class="form-control" id="password" name="user[password]" placeholder="Senha">
         </div>
+
         <div class="form-group mt-3">
-            <label for="exampleInputPassword1">Confirmar Senha</label>
-            <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Senha">
+            <label for="password_confirmation">Confirmar Senha</label>
+            <input type="password" class="form-control" id="password_confirmation" name="user[password_confirmation]" placeholder="Senha">
         </div>
-        <div class=" mt-3">
+
+        <div class="mt-3">
             <a href="/login" class="btn btn-secondary">Voltar</a>
             <button type="submit" class="btn btn-primary" style="float: right;">Criar</button>
         </div>
     </form>
+
 </div>
