--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -1,20 +1,18 @@
-<%= form_with url: '/login', method: :post do |f| %>
-    <div class="container_login"> 
-        <h1 class="title_login"> Fazer login </h1>
-        <form>
-            <div class="form-group mt-3">
-                <label for="exampleInputEmail1">Email</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
-                <small id="emailHelp" class="form-text text-muted">Não compartilharemos seu email com ninguém.</small>
-            </div>
-            <div class="form-group mt-3">
-                <label for="exampleInputPassword1">Senha</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
-            </div>
-            <div class=" mt-3">
-                <a href="/new_user">Criar conta</a>
-                <button type="submit" class="btn btn-primary" style="float: right;">Entrar</button>
-            </div>
-        </form>
+<%= form_with url: '/login', method: :post, local: true do |f| %>
+  <div class="container_login"> 
+    <h1 class="title_login">Fazer login</h1>
+    <div class="form-group mt-3">
+      <label for="exampleInputEmail1">Email</label>
+      <%= f.email_field :email, class: "form-control", id: "exampleInputEmail1", placeholder: "Email", aria: { describedby: "emailHelp" } %>
+      <small id="emailHelp" class="form-text text-muted">Não compartilharemos seu email com ninguém.</small>
     </div>
+    <div class="form-group mt-3">
+      <label for="exampleInputPassword1">Senha</label>
+      <%= f.password_field :password, class: "form-control", id: "exampleInputPassword1", placeholder: "Senha" %>
+    </div>
+    <div class="mt-3">
+      <a href="/new_user">Criar conta</a>
+      <%= f.submit "Entrar", class: "btn btn-primary", style: "float: right;" %>
+    </div>
+  </div>
 <% end %>
