alterando o nome user para channel

--- a/app/views/channel/login.html.erb
+++ b/app/views/channel/login.html.erb
@@ -11,7 +11,7 @@
       <%= f.password_field :password, class: "form-control", id: "exampleInputPassword1", placeholder: "Senha" %>
     </div>
     <div class="mt-3">
-      <a href="/new_user">Criar conta</a>
+      <a href="/new_channel">Criar conta</a>
       <%= f.submit "Entrar", class: "btn btn-primary", style: "float: right;" %>
     </div>
   </div>
