--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
   
   <%  
-    @not_login_path = request.path != '/new_user' && request.path != '/login'
+    @not_login_path = request.path != '/new_channel' && request.path != '/login'
   %>
 
   <body class="modo-escuro" style="max-height:100%;">
