--- a/app/views/channel/new.html.erb
+++ b/app/views/channel/new.html.erb
@@ -1,27 +1,27 @@
 <div class="container_login"> 
     <h1 class="title_login"> Criar conta </h1>
-    <form action="/new_user" method="post">
+    <form action="/new_channel" method="post">
         <!-- Adiciona token CSRF para segurança -->
         <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
         <div class="form-group mt-3">
             <label for="name">Nome</label>
-            <input type="text" class="form-control" id="name" name="user[name]" placeholder="Nome">
+            <input type="text" class="form-control" id="name" name="channel[name]" placeholder="Nome">
         </div>
 
         <div class="form-group mt-3">
             <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" name="user[email]" placeholder="Email">
+            <input type="email" class="form-control" id="email" name="channel[email]" placeholder="Email">
         </div>
 
         <div class="form-group mt-3">
             <label for="password">Senha</label>
-            <input type="password" class="form-control" id="password" name="user[password]" placeholder="Senha">
+            <input type="password" class="form-control" id="password" name="channel[password]" placeholder="Senha">
         </div>
 
         <div class="form-group mt-3">
             <label for="password_confirmation">Confirmar Senha</label>
-            <input type="password" class="form-control" id="password_confirmation" name="user[password_confirmation]" placeholder="Senha">
+            <input type="password" class="form-control" id="password_confirmation" name="channel[password_confirmation]" placeholder="Senha">
         </div>
 
         <div class="mt-3">
