--- a/app/assets/stylesheets/thumbnail.scss
+++ b/app/assets/stylesheets/thumbnail.scss
@@ -23,14 +23,17 @@
 .thumbnail-image {
     width: 100%; 
     position: relative;
+    
 }
 
 .thumbnail-image img {
+    max-height: 200px;
     width: 100%;
     height: 100%;
     border-radius: 13px;
     object-fit: cover;
     transition: all .3s;
+    border: #000 1px solid;
 }
 
 .thumbnail-image img:hover {
