--- a/app/views/feed/index.html.erb
+++ b/app/views/feed/index.html.erb
@@ -2,17 +2,23 @@
 <div class="thumbnail-container">
 
   <% # (1..10) == [1,2,3,4,5,6,7,8,9,10].each  %>
-  <% (1..50).each do |number|  %>
-    <a href="/watch?v=<%= number %>">
+  <% @videos.each do |video|  %>
+    <a href="/watch?v=<%= video.id %>">
       <div class="thumbnail"> 
-        <div class="thumbnail-image"> <img src=" <%= asset_path ('Thumbnails.jpg') %>" alt="thumbnail"/></div>
+        <div class="thumbnail-image"> 
+          <% if video.thumbnail.attached? %>
+            <%= image_tag url_for(video.thumbnail), alt: "Thumbnail"%>
+          <% else %>
+           <%= image_tag "placeholder-thumbnail.jpg", alt: "Placeholder Thumbnail" %>
+         <% end %>
+        </div>
         <div class="thumbnail-infos">
           <div class="thumbnail-channel">
             <%= image_tag "person-circle.svg" %>
           </div>
           <div class="thumbnail-details">
-            <h1>Como Reinventar o Computador do Zero afdnuaf euuiahfasuifeuinfu  ibea sufbueafau</h1>
-            <p>Infinitamente</p>
+            <h1><%= video.title%></h1>
+            <p><%= video.channel.name%></p>
             <p>1,3 mi vizualizações • há 8 meses</p>
           </div>
         </div>
