--- a/app/views/video/new.html.erb
+++ b/app/views/video/new.html.erb
@@ -5,26 +5,38 @@
             <%=mensagem%>
         </div>
     <% end %>
-    <form action="<%=create_video_path%>" method="post">
+    <form action="<%=create_video_path%>" method="post" enctype="multipart/form-data" >
         <!-- Adiciona token CSRF para segurança -->
         <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
         <div class="form-group mt-3">
             <label for="title">Título</label>
-            <input type="text" class="form-control" id="title" name="video[title]" placeholder="Nome">
+            <input type="text" class="form-control" id="title" name="video[title]" placeholder="Nome" required >
         </div>
 
         <div class="form-group mt-3">
             <label for="subtitle">SubTítulo</label>
-            <input type="text" class="form-control" id="subtitle" name="video[subtitle]" placeholder="Email">
+            <input type="text" class="form-control" id="subtitle" name="video[subtitle]" placeholder="Subtitulo" required >
         </div>
 
         <div class="form-group mt-3">
             <label for="description">Descrição</label>
-            <textarea class="form-control" id="description" name="video[description]" placeholder="Senha">
+            <textarea class="form-control" id="description" name="video[description]" placeholder="Descrição"  >
             </textarea>
         </div>
+        
+        <div class="form-group mt-3">
+            
+            <label for="formFileMultiple" class="form-label">thumbnail</label>
+            <input class="form-control" type="file" id="thumbnail" multiple name="video[thumbnail]" required accept="image/jpeg, .png"/>
+        </div>
 
+        <div class="form-group mt-3">
+        
+            <label for="formFileMultiple" class="form-label">Video Upload</label>
+            <input class="form-control" type="file" id="video" multiple name="video[file]" required accept="video/mp4"/>
+        </div>
+                
         <div class="mt-3">
             <button type="submit" class="btn btn-primary" style="float: right;">Criar</button>
         </div>
