--- a/app/views/video/watch.html.erb
+++ b/app/views/video/watch.html.erb
@@ -1,6 +1,10 @@
 <div class="row">
     <div class="col-8">
+        <% if @video.file.attached? %>
         <%= video_tag url_for(@video.file),  controls: true, style:'width: 100%; max-heigth: 100px '  %>
+          <% else %>
+           <div> Viídeo não encontrado </div> 
+         <% end %>
         <div class="row">
             <div class="col-12 mt-3 video-watch-title">
                <%= @video.title %>
@@ -8,7 +12,11 @@
         </div>
         <div class="row mt-3">
             <div class="col-1 my-auto" style="max-width: 40px;">
-                 <img src=" <%= asset_path ('Thumbnails.jpg') %>" style="width: 100%; height: auto; border-radius: 13px" alt="thumbnail"/>
+                 <% if @video.channel.photo.attached? %>
+                <%= image_tag url_for(@video.channel.photo), alt: "Photo", style: "width: 40px; height: 40px; border-radius: 50%"%>
+              <% else %>
+                <%= image_tag "person-circle.svg" %>
+             <% end %>
             </div>
             <div class="col-2 watch-channel-title mx-3">
                 <strong><%= @video.channel.name%></strong>
@@ -41,14 +49,7 @@
             </div>
         
             <div class="text_description"> 
-                
-            GROWTH: https://www.gsuplementos.com.br
-
-            Aproveite e acesse o site do nosso novo parceiro ! E para mais descontos utilize os CUPONS, CARIANI, BALESTRIN E CTRC
-            https://www.usealphaco.com.br
-
-            As melhores roupas, com qualidade e melhor preço da internet !
-            Transcrição
+                <%= @video.description %>
             </div>
         </div>
     </div>
@@ -57,11 +58,15 @@
             <a href="/watch?v=<%= video.id %>" style="text-decoration: none">
                 <div class="thumbnail-suggested"> 
                     <div class="thumbnail-suggested-image"> 
-                        <img src=" <%= asset_path ('Thumbnails.jpg') %>" alt="thumbnail"/>
+                        <% if video.thumbnail.attached? %>
+                            <%= image_tag url_for(video.thumbnail), alt: "Thumbnail"%>
+                        <% else %>
+                            <%= image_tag "Thumbnails.jpg", alt: "Placeholder Thumbnail" %>
+                        <% end %>
                     </div>
                     <div class="thumbnail-suggested-infos">
                         <h1> <%= video.title %> </h1>
-                        <p>Infinitamente</p>
+                        <p><%= video.channel.name %></p>
                         <p>1,3 mi vizualizações • há 8 meses</p>
                     </div>
                 </div>
