--- a/app/assets/stylesheets/watch.scss
+++ b/app/assets/stylesheets/watch.scss
@@ -92,3 +92,10 @@
     padding: 8px;
     border-radius: 13px;
 }
+.card-body{
+    width: 100%;
+    height: auto;
+    padding: 8px;
+    margin: 0;
+    
+}
