--- a/app/views/channel/history.html.erb
+++ b/app/views/channel/history.html.erb
@@ -3,6 +3,8 @@
 
     <% # (1..10) == [1,2,3,4,5,6,7,8,9,10].each  %>
     <% @watched_videos.each do |video|  %>
+      <% puts "*******************************************************************************************************************************" %> 
+      <% puts "Video ID: #{video.id}, Title: #{video.title}" %>
       <a href="/watch?v=<%= video.id %>">
         <div class="thumbnail"> 
           <div class="thumbnail-image"> 
