--- a/app/views/video/watch.html.erb
+++ b/app/views/video/watch.html.erb
@@ -81,8 +81,8 @@
    <form action="/comments/create" method="post">
     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
     <input type="hidden" name="comment[video_id]" value="<%= @video.id %>">
-    <input type="text" class="form-control mt-10" placeholder="Digite seu comentário aqui" name="comment[content]">
-    <button type="submit" class="btn btn-secondary mt-10">Enviar</button>
+    <input type="text" class="form-control mt-10 " placeholder="Digite seu comentário aqui" name="comment[content]">
+    <button type="submit" class="btn btn-secondary mt-10 float-end ">Enviar</button>
   </form>
 
 
@@ -114,7 +114,7 @@
                           </a>
                         </div>
                       </div>
-                      <p><%= comment.content %></p> 
+                      <p ><%= comment.content %></p> 
                     </div>
                   </div>
                 </div>
