--- a/app/views/channel/history.html.erb
+++ b/app/views/channel/history.html.erb
@@ -1,8 +1,9 @@
 
 <div class="thumbnail-container">
 
-    <% # (1..10) == [1,2,3,4,5,6,7,8,9,10].each  %>
-    <% @watched_videos.each do |video|  %>
+  <% # (1..10) == [1,2,3,4,5,6,7,8,9,10].each  %>
+  <% @watched_videos.each do |video|  %>
+    <% if video.present? %>
       <% puts "*******************************************************************************************************************************" %> 
       <% puts "Video ID: #{video.id}, Title: #{video.title}" %>
       <a href="/watch?v=<%= video.id %>">
@@ -11,35 +12,27 @@
             <% if video.thumbnail.attached? %>
               <%= image_tag url_for(video.thumbnail), alt: "Thumbnail"%>
             <% else %>
-             <%= image_tag "Thumbnails.jpg", alt: "Placeholder Thumbnail" %>
-           <% end %>
+              <%= image_tag "Thumbnails.jpg", alt: "Placeholder Thumbnail" %>
+            <% end %>
           </div>
           <div class="thumbnail-infos">
-            <div class="thumbnail-channel">
-              <% if video.channel.photo.attached? %>
-              <%= image_tag url_for(video.channel.photo), alt: "Photo"%>
-            <% else %>
-              <%= image_tag "person-circle.svg" %>
-           <% end %>
-            </div>
-            <div class="thumbnail-infos">
               <div class="thumbnail-channel">
                 <% if video.channel.photo.attached? %>
-                <%= image_tag url_for(video.channel.photo), alt: "Photo"%>
-              <% else %>
-                <%= image_tag "person-circle.svg" %>
-            <% end %>
+                  <%= image_tag url_for(video.channel.photo), alt: "Photo"%>
+                <% else %>
+                  <%= image_tag "person-circle.svg" %>
+                <% end %>
               </div>
               <div class="thumbnail-details">
                 <h1><%= video.title%></h1>
                 <p><%= video.channel.name%></p>
                 <p>1,3 mi vizualizações • há 8 meses</p>
               </div>
-            </div>
           </div>
-        </a>
-      <% end %>
+        </div>
+      </a>
     <% else %>
       <p>Você ainda não assistiu a nenhum vídeo.</p>
     <% end %>
-  <div>
+  <% end %>
+<div>
