--- a/app/views/video/watch.html.erb
+++ b/app/views/video/watch.html.erb
@@ -54,7 +54,7 @@
         <div class="container_description mt-3" > 
             <div class="views_description"> 
                 
-             1.677 visualizações  12 de abr. de 2023
+              <%= @video.views_count_string %>  <%= @video.time_count_string %>
             
             </div>
         
@@ -77,7 +77,7 @@
                     <div class="thumbnail-suggested-infos">
                         <h1> <%= video.title %> </h1>
                         <p><%= video.channel.name %></p>
-                        <p>1,3 mi vizualizações • há 8 meses</p>
+                        <p> <%= video.views_count_string %> • <%= video.time_count_string %> </p>
                     </div>
                 </div>
             </a>
