--- a/app/views/video/watch.html.erb
+++ b/app/views/video/watch.html.erb
@@ -110,6 +110,9 @@
                     </div>
                     <div class="comment-text w-100">
                       <h5><%= comment.channel.name %></h5>
+                      <small>
+                        <%= comment.created_at.strftime("%d/%m/%y")%>
+                      </small>
                       <div class="comment-footer d-flex justify-content-between align-items-center">
                         
                         <div class="action-icons">
