--- a/app/views/video/watch.html.erb
+++ b/app/views/video/watch.html.erb
@@ -111,7 +111,7 @@
                     <div class="comment-text w-100">
                       <h5><%= comment.channel.name %></h5>
                       <small>
-                        <%= comment.created_at.strftime("%d/%m/%y")%>
+                        <%= comment.comment_time_count_string%>
                       </small>
                       <div class="comment-footer d-flex justify-content-between align-items-center">
                         
