--- a/app/views/video/watch.html.erb
+++ b/app/views/video/watch.html.erb
@@ -18,10 +18,19 @@
                 <%= image_tag "person-circle.svg" %>
              <% end %>
             </div>
+
             <div class="col-2 watch-channel-title mx-3">
                 <strong><%= @video.channel.name%></strong>
                 <small>1,11 mi de inscritos</small>
             </div>
+
+            <% if @video.channel == logged_channel %>
+              <div class="col-2 my-auto">
+                <%= button_to "Excluir", delete_path(@video.channel.id, @video.id), 
+                  method: :delete, class: "btn-watch-actions black-bg", style: "color:red" %>
+              </div>
+            <% end %>
+
             <div class="col-2 my-auto">
                 <button class="btn-watch-actions black-bg">Inscrever-se</button>
             </div>
