--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,12 @@
 
           <% if @not_login_path %>
           <div>
-            <div class="input-group main-search-bar">
-              <input type="text" class="form-control" placeholder="Pesquisar" aria-label="Recipient's username" aria-describedby="button-addon2" style="border-bottom-left-radius:20px;border-top-left-radius:20px">
-              <button class="btn btn-outline-secondary" type="button" id="button-addon2" style="border-bottom-right-radius:20px;border-top-right-radius:20px"> <%= image_tag 'search.svg' %> </button>
-            </div>
+            <%= form_with url: search_path, method: :get, local: true do |form| %>
+              <div class="input-group main-search-bar">
+                <%= form.text_field :prompt, class: "form-control", placeholder: "Pesquisar", aria: { label: "Recipient's username", describedby: "button-addon2" }, style: "border-bottom-left-radius:20px;border-top-left-radius:20px" %>
+                <%= form.submit image_tag('search.svg'), class: "btn btn-outline-secondary", id: "button-addon2", style: "border-bottom-right-radius:20px;border-top-right-radius:20px" %>
+              </div>
+            <% end %>
           </div>
 
           <div>
