--- a/app/assets/stylesheets/history.scss
+++ b/app/assets/stylesheets/history.scss
@@ -20,12 +20,15 @@
 
 .thumbnail-image img {
     max-height: 200px;
+    min-height: 200px;
     width: 100%;
-    height: 100%;
+    height: 200px;
     border-radius: 13px;
     object-fit: cover;
     transition: all .3s;
     border: #000 1px solid;
+    object-position: center;
+    object-fit: cover;
 }
 
 .thumbnail .thumbnail-infos {
