--- a/app/views/video/watch.html.erb
+++ b/app/views/video/watch.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-8">
         <% if @video.file.attached? %>
-        <%= video_tag url_for(@video.file),  controls: true, style:'width: 100%; max-heigth: 100px '  %>
-          <% else %>
-           <div> Viídeo não encontrado </div> 
+          <%= video_tag url_for(@video.file),  controls: true, style:'width: 100%; height: 600px;max-heigth: 600px;object-position: center;'  %>
+        <% else %>
+          <div> Video não encontrado </div> 
          <% end %>
         <div class="row">
             <div class="col-12 mt-3 video-watch-title">
