Fix integer to String bug on watch view

--- a/app/views/video/watch.html.erb
+++ b/app/views/video/watch.html.erb
@@ -38,7 +38,7 @@
             <% end %>
 
             <div class="col-1 my-auto">
-              <%= button_to class: "btn-watch-actions white-bg", onclick: "giveLikeToVideo(" + @video.id + ")" do %>
+              <%= button_to class: "btn-watch-actions white-bg", onclick: "giveLikeToVideo(#{ @video.id })" do %>
                 <%= image_tag "hand-thumbs-up"%> <span id="likes-count"><%= @video.likes_count %> </span>
               <% end %>
             </div>
